--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="card z-depth-4">
             <div class="card-content">
               <div class="profile-img">
-                <img class="responsive-img circle center-align" src="https://lh3.googleusercontent.com/-a8YDO66IX5Y/AAAAAAAAAAI/AAAAAAAAAAA/ADPlhfKCj7GGP92jeiKI2owhyPoSOa3QDw/s256-c-mo/photo.jpg">
+                <img class="responsive-img circle center-align" src="img/profile.jpg">
               </div>
               <br><br><br>
               <h2>Nywton Barros</h2>
