--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="card z-depth-4">
             <div class="card-content">
               <div class="profile-img">
-                <img class="responsive-img circle center-align" src="img/profile.jpg">
+                <img class="responsive-img circle center-align" src="https://drive.google.com/file/d/19TQ5RvUlyc7oknpF-5cUYOBjdA_8idHB/view">
               </div>
               <br><br><br>
               <h2>Nywton Barros</h2>
