--- a/index.html
+++ b/index.html
@@ -58,16 +58,20 @@
 
               <div>
                 <i class="material-icons">important_devices</i>
-                <span>Passionate Web Developer</span>
+                <span>Desenvolvedor Web / Mobile</span>
               </div>
               <br>
-              <p>I'm a Full Stack Web Developer from Brazil that started dev about 3 years ago.
+		<hr/>
+		<p>Desenvolvedor Web / Mobile apaixonado por criar novas experiências e simplificar a vida das pessoas.
+		Desenvolveu sistemas de apoio, APIs, websites e aplicativos para o Governo do Estado de Alagoas. Atualmente atua como programador autônomo,
+		já atuou como Engenheiro de Software e Gerente de Projetos em empresas no Brasil e nos Estados Unidos.</p>
+		<!-- <p> I'm a Full Stack Web Developer from Brazil that started dev about 3 years ago.
                 I love building new experiences for people and simplify their lives.
-                I built IS, websites and mobile apps for the government and i've worked on some brazilian and american agencies</p>
+                I built IS, websites and mobile apps for the government and i've worked on some brazilian and american agencies</p> -->
             </div>
             <p class="center">
               <a href="" class="waves-effect waves-light btn btn-flat red darken-2 white-text">Download CV</a>
-              <a href="" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text">Contact Me</a>
+              <a href="" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text">Contato</a>
             </p>
             <br><br>
 
@@ -86,7 +90,7 @@
 
   <div class="container">
     <div class="section-title center-align">
-      <h4><i class="material-icons">code</i> Skills</h4>
+      <h4><i class="material-icons">code</i> Habilidades</h4>
     </div>
    <div class="card red darken-2 white-text z-depth-4">
      <div class="card-content">
@@ -112,7 +116,7 @@
                <div class="determinate" style="width: 78%;"><i class="fa fa-circle"></i></div>
              </div>
 
-             <span>Javascript</span>
+             <span>Node</span>
              <div class="progress">
                <div class="determinate" style="width: 70%;"><i class="fa fa-circle"></i></div>
              </div>
@@ -127,9 +131,9 @@
                <div class="determinate" style="width: 70%;"><i class="fa fa-circle"></i></div>
              </div>
 
-             <span>Linux</span>
+             <span>React Native</span>
              <div class="progress">
-               <div class="determinate" style="width: 89%;"><i class="fa fa-circle"></i></div>
+               <div class="determinate" style="width: 60%;"><i class="fa fa-circle"></i></div>
              </div>
 
 
@@ -142,22 +146,22 @@
            <div class="skill-bar col m10 wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
              <h5 class="white-text"><i class="material-icons">accessibility</i> Personal Skills </h5>
              <br><br>
-             <span>Communication</span>
+             <span>Comunicação</span>
              <div class="progress">
                <div class="determinate" style="width: 98%;"><i class="fa fa-circle"></i></div>
              </div>
 
-             <span>Team Work</span>
+             <span>Trabalho em Equipe</span>
              <div class="progress">
                <div class="determinate" style="width: 96%;"><i class="fa fa-circle"></i></div>
              </div>
 
-             <span>Creativity</span>
+             <span>Criatividade</span>
              <div class="progress">
                <div class="determinate" style="width: 98%;"><i class="fa fa-circle"></i></div>
              </div>
 
-             <span>Dedication</span>
+             <span>Dedicação</span>
              <div class="progress">
                <div class="determinate" style="width: 97%;"><i class="fa fa-circle"></i></div>
              </div>
@@ -181,13 +185,13 @@
         <div class="card timeline-content">
           <div class="card-content">
             <a href=""><h4>Adroid & Backend Developer <br>@IFAL</h4></a>
-            <span>11 Jan 2015 </span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio,
-              dolorum provident rerum aut hic quasi placeat iure tempora.</p>
+            <span>Jan 2014 </span>
+            <p>Bolsista de iniciação científica, trabalhou como programador Web/Mobile 
+		desenvolveu o aplicativo Doe+ - Plataforma de Campanhas de Doação e Sangue e Agendamentos dos Hemocentros do Estado de Alagoas. </p>
           </div>
           <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <span class="card-title grey-text text-darken-4">IFAL<i class="material-icons right">close</i></span>
+            <p></p>
           </div>
         </div>
         <div class="timeline-badge blue white-text"><i class="material-icons">language</i></div>
@@ -196,30 +200,14 @@
       <div class="timeline-event">
         <div class="card timeline-content">
           <div class="card-content">
-            <a href=""><h4>Adroid & Backend Developer <br>@Bluevox</h4></a>
-            <span>11 Jan 2015 </span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio,
-              dolorum provident rerum aut hic quasi placeat iure tempora.</p>
+            <a href=""><h4>Desenvolvedor Fullstack Web / Mobile <br> @Secti</h4></a>
+            <span>Set 2015 </span>
+            <p> Programador / Analista de Sistemas, desenvolveu sistemas de controle interno para a 
+		Secretaria de Ciência, Tecnologia e Inovação do Estado de Alagoas. Trabalhou também em portais de eventos do Governo.</p>
           </div>
           <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>
-        </div>
-        <div class="timeline-badge red white-text"><i class="material-icons">work</i></div>
-      </div>
-
-      <div class="timeline-event">
-        <div class="card timeline-content">
-          <div class="card-content">
-            <a href=""><h4>Fullstack Web Developerbr <br> @Secti</h4></a>
-            <span>11 Jan 2015 </span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio,
-              dolorum provident rerum aut hic quasi placeat iure tempora.</p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+            <p></p>
           </div>
         </div>
         <div class="timeline-badge green white-text"><i class="material-icons">person</i></div>
@@ -228,14 +216,13 @@
       <div class="timeline-event">
         <div class="card timeline-content">
           <div class="card-content">
-            <a href=""><h4>Fullstack Developer <br>@Roga Labs</h4></a>
-            <span>11 Jan 2015 </span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio,
-              dolorum provident rerum aut hic quasi placeat iure tempora.</p>
+            <a href=""><h4>Programador Autônomo</h4></a>
+            <span>Jan 2017 / Hoje</span>
+            <p> Atende como freelancer empresas do Brasil, já trabalhou em projetos de Startups Brasileiras e Americanas. </p>
           </div>
           <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+            <p></p>
           </div>
         </div>
         <div class="timeline-badge red white-text"><i class="material-icons">work</i></div>
@@ -247,7 +234,7 @@
   <br><br>
 
   <!-- PORTFOLIO -->
-  <div class="container">
+  <!-- <div class="container">
     <div class="section-title center-align">
       <h4><i class="material-icons">card_travel</i> Portfolio</h4>
     </div>
@@ -321,7 +308,7 @@
 
             </form>
           </div>
-        </div>
+        </div> -->
 
         <!-- =========================================
                 INTEREST
