--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <nav class="red darken-2" role="navigation">
       <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo light">Nywton Barros</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Experience</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Habilidades</a></li>
+          <li><a href="#">Experiência</a></li>
+          <!-- <li><a href="#">Portfolio</a></li> -->
+          <li><a href="#">Contato</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Experience</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Habilidades</a></li>
+          <li><a href="#">Experiência</a></li>
+          <!-- <li><a href="#">Portfolio</a></li> -->
+          <li><a href="#">Contato</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
@@ -266,7 +266,7 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
 
   <br><br>
 
@@ -274,41 +274,14 @@
     <div class="container">
       <div class="row">
         <div class="section-title wow fadeIn a1 animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
-          <h2> <i class="fa fa-send"></i>Contact</h2>
+          <h2> <i class="fa fa-send"></i>Contato</h2>
         </div>
         <div class="contact-form z-depth-1" id="contact">
           <div class="row">
-            <form id="contactForm" data-toggle="validator" novalidate="true">
-              <div id="msgSubmit" class="h3 text-center hidden"></div>
-              <div class="input-field col m6 s12 wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
-                <label for="name" class="h4">Full Name *</label>
-                <input type="text" class="form-control validate" id="name" required="" data-error="NEW ERROR MESSAGE">
-              </div>
-              <div class="input-field col m6 s12 wow fadeIn a4 animated" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">
-                <label for="email" class="h4">Email *</label>
-                <input type="email" class="form-control validate" id="email" required="">
-              </div>
-              <div class="input-field col m6 s12 wow fadeIn a3 animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeIn;">
-                <label for="last_name" class="h4">Subject *</label>
-                <input type="text" class="form-control validate" id="last_name" required="">
-              </div>
-              <div class="input-field col m6 s12 wow fadeIn a5 animated" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeIn;">
-                <div class="select-wrapper"><input type="text" class="select-dropdown" readonly="true" data-activates="select-options-65967655-b2cb-b855-84cc-97498a0f5968" value="Choose your Budget"><i class="mdi-navigation-arrow-drop-down active"></i><select class="initialized">
-                  <option value="">Choose your Budget</option>
-                  <option value="1">$10000-$20000</option>
-                  <option value="2">$50000-$100000</option>
-                  <option value="3">$50000-$1000000</option>
-                </select></div>
-              </div>
-              <div class="input-field col m12 s12 wow fadeIn a6 animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeIn;">
-                <label for="message" class="h4">Message *</label>
-                <textarea id="message" class="form-control materialize-textarea validate" required=""></textarea>
-              </div>
-              <button type="submit" id="form-submit" class="btn btn-success waves-effect wow fadeIn a7 disabled animated" data-wow-delay="0.7s" style="visibility: visible; animation-delay: 0.7s; animation-name: fadeIn;">Submit</button>
-
-            </form>
-          </div>
-        </div> -->
+        	<p>Email: nywton.barros@gmail.com</p> 
+        	<p>Telefone: +55 82 98131-5693</p> 
+	  </div>
+        </div>
 
         <!-- =========================================
                 INTEREST
@@ -336,7 +309,7 @@
         <div class="col l6 s12">
           <h5 class="white-text">Nywton Barros</h5>
           <p class="grey-text text-lighten-4">
-            Full Stack Web Developer from Brazil that started dev about 3 years ago.
+            Full Stack Web Developer from Brazil that started dev about 4 years ago.
           </p>
 
 
