--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
         <div class="section-title wow fadeIn a1 animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
           <h2> <i class="fa fa-send"></i>Contato</h2>
         </div>
-        <div class="contact-form z-depth-1" id="contact">
-          <div class="row">
+        <div class="card z-depth-4" id="contact">
+          <div class="card-content">
         	<p>Email: nywton.barros@gmail.com</p> 
         	<p>Telefone: +55 82 98131-5693</p> 
 	  </div>
