--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
   <section id="contact-form">
     <div class="container">
       <div class="row">
-        <div class="section-title wow fadeIn a1 animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
-          <h2> <i class="fa fa-send"></i>Contato</h2>
+        <div class="section-title center-align">
+          <h4> <i class="fa fa-send"></i>Contato</h2>
         </div>
         <div class="card z-depth-4" id="contact">
           <div class="card-content">
-        	<p>Email: nywton.barros@gmail.com</p> 
-        	<p>Telefone: +55 82 98131-5693</p> 
+		<p class="contact-info"><i class="material-icons">smartphone</i> +55 82 98185-5693</p>         	
+		<p class="contact-info"><i class="material-icons">email</i> nywton.barros@gmail.com</p>
 	  </div>
         </div>
 
