--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
   <br><br>
 
-  <section id="contact-form">
+  <!-- <section id="contact-form">
     <div class="container">
       <div class="row">
         <div class="section-title center-align">
@@ -281,7 +281,7 @@
 		<p class="contact-info"><i class="material-icons">smartphone</i> +55 82 98185-5693</p>         	
 		<p class="contact-info"><i class="material-icons">email</i> nywton.barros@gmail.com</p>
 	  </div>
-        </div>
+        </div> -->
 
         <!-- =========================================
                 INTEREST
@@ -315,11 +315,10 @@
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Contato</h5>
           <ul>
-            <li><a class="white-text" href="#!"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="white-text" href="#!"><i class="fa fa-github"></i></a></li>
-            <li><a class="white-text" href="#!"><i class="fa fa-linkedin"></i></a></li>
+            <li><p class="contact-info"><i class="material-icons">smartphone</i> +55 82 98185-5693</p></li>
+            <li><p class="contact-info"><i class="material-icons">email</i> nywton.barros@gmail.com</p></li>
           </ul>
         </div>
       </div>
