--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <nav class="red darken-2" role="navigation">
       <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo light">Nywton Barros</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Habilidades</a></li>
-          <li><a href="#">Experiência</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#habilidades">Habilidades</a></li>
+          <li><a href="#experiencia">Experiência</a></li>
           <!-- <li><a href="#">Portfolio</a></li> -->
-          <li><a href="#">Contato</a></li>
+          <li><a href="#contato">Contato</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Habilidades</a></li>
-          <li><a href="#">Experiência</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#habilidades">Habilidades</a></li>
+          <li><a href="#experiencia">Experiência</a></li>
           <!-- <li><a href="#">Portfolio</a></li> -->
-          <li><a href="#">Contato</a></li>
+          <li><a href="#contato">Contato</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
@@ -42,7 +42,7 @@
 
   <!-- BANNER -->
   <div class="section" id="index-card">
-    <div class="container">
+    <div class="container" id="sobre">
       <br><br>
 
       <div class="row">
@@ -70,8 +70,8 @@
                 I built IS, websites and mobile apps for the government and i've worked on some brazilian and american agencies</p> -->
             </div>
             <p class="center">
-              <a href="" class="waves-effect waves-light btn btn-flat red darken-2 white-text">Download CV</a>
-              <a href="" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text">Contato</a>
+              <a href="docs/curr.pdf" target="_blank" class="waves-effect waves-light btn btn-flat red darken-2 white-text">Download CV</a>
+              <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text">Contato</a>
             </p>
             <br><br>
 
@@ -88,9 +88,9 @@
 
   <!-- SKILLS -->
 
-  <div class="container">
+  <div class="container" >
     <div class="section-title center-align">
-      <h4><i class="material-icons">code</i> Habilidades</h4>
+      <h4 id="habilidades"><i class="material-icons">code</i> Habilidades</h4>
     </div>
    <div class="card red darken-2 white-text z-depth-4">
      <div class="card-content">
@@ -175,7 +175,7 @@
   <br><br>
 
   <!-- WORK TIME LINE -->
-  <div class="container">
+  <div class="container" id="experiencia">
     <div class="section-title center-align">
       <h4><i class="material-icons">card_travel</i> Work Experience</h4>
     </div>
@@ -287,23 +287,23 @@
                 INTEREST
         ==========================================-->
 
-        <div class="interests col s12 m12 l12 wow fadeIn animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
-          <div class="row">
-            <ul class="z-depth-1"> <!-- interetsr icon start -->
-              <li><i class="fa fa-facebook-official tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Facebook"></i></li>
-              <li><i class="fa fa-twitter tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Twitter"></i></li>
-              <li><i class="fa fa-linkedin tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="linkedin"></i></li>
-              <li><i class="fa fa-whatsapp tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Whatsapp"></i></li>
-              <li><i class="fa fa-youtube tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Youtube"></i></li>
-              <li><i class="fa fa-vimeo tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Vimeo"></i></li>
-            </ul> <!-- interetsr icon end -->
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+        <!--<div class="interests col s12 m12 l12 wow fadeIn animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">-->
+          <!--<div class="row">-->
+            <!--<ul class="z-depth-1"> &lt;!&ndash; interetsr icon start &ndash;&gt;-->
+              <!--<li><i class="fa fa-facebook-official tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Facebook"></i></li>-->
+              <!--<li><i class="fa fa-twitter tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Twitter"></i></li>-->
+              <!--<li><i class="fa fa-linkedin tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="linkedin"></i></li>-->
+              <!--<li><i class="fa fa-whatsapp tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Whatsapp"></i></li>-->
+              <!--<li><i class="fa fa-youtube tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Youtube"></i></li>-->
+              <!--<li><i class="fa fa-vimeo tooltipped col m2 s6" data-position="top" data-delay="50" data-tooltip="Vimeo"></i></li>-->
+            <!--</ul> &lt;!&ndash; interetsr icon end &ndash;&gt;-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</section>-->
 
-  <footer class="page-footer red darken-2">
+  <footer id="contato" class="page-footer red darken-2">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
