--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                     I built IS, websites and mobile apps for the government and i've worked on some brazilian and american agencies</p> -->
           </div>
           <p class="center">
-            <a href="docs/curr.pdf" target="_blank" class="waves-effect waves-light btn btn-flat red darken-2 white-text">Download CV</a>
-            <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text">Contato</a>
-            <a target="_blank" href="https://telegram.me/mrnywton" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text">Telegram</a>
+            <a href="docs/curr.pdf" target="_blank" class="waves-effect waves-light btn btn-flat red darken-2 white-text"><i class="material-icons left">business</i> Currículo</a>
+            <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text"><i class="material-icons left">email</i> Contato</a>
+            <a target="_blank" href="https://telegram.me/mrnywton" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text"><i class="material-icons left">chat</i> Telegram</a>
           </p>
           <br><br>
 
