--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       gtag('config', 'UA-118900785-1');
   </script>
-  
+
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>Nywton Barros - Resume</title>
@@ -90,7 +90,7 @@
           </div>
           <p class="center">
             <a href="docs/curr.pdf" target="_blank" class="waves-effect waves-light btn btn-flat red darken-2 white-text"><i class="material-icons left">business</i> Currículo</a>
-            <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text"><i class="material-icons left">email</i> Contato</a>
+            <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text  hide-on-small-only	"><i class="material-icons left">email</i> Contato</a>
             <a target="_blank" href="https://telegram.me/mrnywton" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text"><i class="material-icons left">chat</i> Telegram</a>
           </p>
           <br><br>
