--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <div class="timeline-event">
       <div class="card timeline-content">
         <div class="card-content">
-          <a href=""><h4>Adroid & Backend Developer <br>@IFAL</h4></a>
+          <a href=""><h4>Desenvolvedor Adroid & Backend <br>@IFAL</h4></a>
           <span>Jan 2014 </span>
           <p>Bolsista de iniciação científica, trabalhou como programador Web/Mobile
             desenvolveu o aplicativo Doe+ - Plataforma de Campanhas de Doação e Sangue e Agendamentos dos Hemocentros do Estado de Alagoas. </p>
