--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="col m2 skill-icon">
           </div>
           <div class="skill-bar col m10 wow fadeIn a1 animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
-            <h5 class="white-text"><i class="material-icons">card_travel</i> Professional Skills </h5>
+            <h5 class="white-text"><i class="material-icons">card_travel</i>  Profissionais </h5>
             <br><br>
             <span>Ruby on Rails</span>
             <div class="progress">
@@ -164,7 +164,7 @@
           <div class="col m2 skill-icon">
           </div>
           <div class="skill-bar col m10 wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
-            <h5 class="white-text"><i class="material-icons">accessibility</i> Personal Skills </h5>
+            <h5 class="white-text"><i class="material-icons">accessibility</i> Pessoais </h5>
             <br><br>
             <span>Comunicação</span>
             <div class="progress">
@@ -197,7 +197,7 @@
 <!-- WORK TIME LINE -->
 <div class="container" id="experiencia">
   <div class="section-title center-align">
-    <h4><i class="material-icons">card_travel</i> Work Experience</h4>
+    <h4><i class="material-icons">card_travel</i> Experiência Profissional</h4>
   </div>
   <div class="timeline">
 
