--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
   <nav class="red darken-2" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo light">Nywton Barros</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#habilidades">Habilidades</a></li>
-        <li><a href="#experiencia">Experiência</a></li>
-        <!-- <li><a href="#">Portfolio</a></li> -->
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="#sobre" class="js-scroll-trigger">Sobre</a></li>
+        <li><a href="#habilidades" class="js-scroll-trigger">Habilidades</a></li>
+        <li><a href="#experiencia" class="js-scroll-trigger">Experiência</a></li>
+         <li><a href="#portfolio" class="js-scroll-trigger">Portfolio</a></li>
+        <li><a href="#contato" class="js-scroll-trigger">Contato</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#habilidades">Habilidades</a></li>
-        <li><a href="#experiencia">Experiência</a></li>
-        <!-- <li><a href="#">Portfolio</a></li> -->
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="#sobre" class="js-scroll-trigger">Sobre</a></li>
+        <li><a href="#habilidades" class="js-scroll-trigger">Habilidades</a></li>
+        <li><a href="#experiencia" class="js-scroll-trigger">Experiência</a></li>
+         <li><a href="#portfolio" class="js-scroll-trigger">Portfolio</a></li>
+        <li><a href="#contato" class="js-scroll-trigger">Contato</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -257,7 +257,7 @@
 <br><br>
 
 <!-- Gallery -->
-<div class="section-title center-align">
+<div class="section-title center-align" id="portfolio">
   <h4><i class="material-icons">card_travel</i> Portfolio</h4>
 </div>
 <div id="portfolio" class="cx gray">
@@ -412,6 +412,7 @@
 <script src="js/materialize.js"></script>
 <script src="js/init.js"></script>
 <script src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/gallery.min.opt.js?9078412610821087350" crossorigin="anonymous"></script>
+<script src="js/scroll-nav.js"></script>
 
 
 </body>
