--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
 <div id="portfolio" class="cx gray">
   <div class="db">
     <div class="b e">
+      <!--Doe+-->
       <div class="d hx hf gu gallery-item gallery-expand ce polygon">
         <div class="gallery-curve-wrapper">
           <a class="gallery-cover gray">
@@ -295,6 +296,52 @@
                 <a class="carousel-item" href="full-header.html#three!"><img src="img/portfolio/doemais/banner2.jpg" crossOrigin="anonymous"></a>
                 <!--<a class="carousel-item" href="full-header.html#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?9078412610821087350" crossOrigin="anonymous"></a>-->
                 <!--<a class="carousel-item" href="full-header.html#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?9078412610821087350" crossOrigin="anonymous"></a>-->
+              </div>
+            </div>
+          </div>
+          <div class="gallery-action">
+            <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">favorite</i></a>
+          </div>
+        </div>
+      </div>
+
+      <!--Sgplan-->
+      <div class="d hx hf gu gallery-item gallery-expand ce polygon">
+        <div class="gallery-curve-wrapper">
+          <a class="gallery-cover gray">
+            <img class="responsive-img" src="img/portfolio/sgplan/principal.PNG" alt="placeholder" crossOrigin="anonymous">
+          </a>
+          <div class="gallery-header">
+            <span>SGPLAN</span>
+          </div>
+          <div class="gallery-body">
+            <div class="title-wrapper">
+              <h3>Sgplan</h3>
+              <span class="gk">2016-2017</span>
+            </div>
+            <p class="fi">
+              Um plano estratégico tem como objetivo principal fornecer direcionamento comum a ser seguido por toda a organização, identificando
+              responsabilidades, garantindo alinhamento e oferecendo meios para medição do sucesso da estratégia de modo focado, visando o alcance dos
+              objetivos institucionais e a maximização dos resultados. Com o objetivo de oferecer maior transparência e maior eficiência na gestão do plano,
+              bem como alinhas os objetivos da TI com os objetivos estratégicos da SECTI, foi desenvolvido
+              um sistema web que auxilar os gestores e a governança, no acompanhamento das ações e atividades do Plano 2017( marcos de acompanhamento e
+              evidências), o SGPLAN.
+            </p>
+            <p class="fi">
+              A ferramenta disponibiliza informações rápidas e objetivas sobre as ações e seus respectivos status de entrega, relatórios estão sendo implementados conforme a necessidade dos gestores. Outras funcionalidades como um DashBoard com indicadores estão sendo construídas. O sistema foi construído utilizando a linguagem Ruby v. 2.3.0, e Banco de Dados PostgreSQL v. 9.6. O front-end da aplicação foi construído utilizando HTML, CSS e JavaScript. O sistema está hospedado em uma máquina virtual utilizando CENTOS no datacenter do ITEC. Para acessar o sistema basta acessar o link http://sgplan.secti.al.gov.br
+            </p>
+            <h4>Notícias relacionadas</h4>
+            <ul>
+              <li><a href="http://www.agenciaalagoas.al.gov.br/noticia/item/18830-palmeira-dos-indios-implanta-sistema-inovador-desenvolvido-pela-secti" target="_blank">http://www.agenciaalagoas.al.gov.br/noticia/item/18830-palmeira-dos-indios-implanta-sistema-inovador-desenvolvido-pela-secti</a></li>
+              <li><a href="http://www.agenciaalagoas.al.gov.br/noticia/item/15182-sistema-de-gestao-facilita-monitoramento-das-acoes-do-governo" target="_blank">http://www.agenciaalagoas.al.gov.br/noticia/item/15182-sistema-de-gestao-facilita-monitoramento-das-acoes-do-governo</a></li>
+            </ul>
+
+            <div class="carousel-wrapper">
+              <div class="t">
+                <a class="carousel-item" href="full-header.html#one!"><img src="img/portfolio/sgplan/banner1.PNG" crossOrigin="anonymous"></a>
+                <a class="carousel-item" href="full-header.html#two!"><img src="img/portfolio/sgplan/banner2.PNG" crossOrigin="anonymous"></a>
+                <a class="carousel-item" href="full-header.html#three!"><img src="img/portfolio/sgplan/banner3.PNG" crossOrigin="anonymous"></a>
+                <a class="carousel-item" href="full-header.html#four!"><img src="img/portfolio/sgplan/banner4.PNG"></a>
               </div>
             </div>
           </div>
