--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
                 <a class="carousel-item" href="full-header.html#one!"><img src="img/portfolio/sgplan/banner1.PNG" crossOrigin="anonymous"></a>
                 <a class="carousel-item" href="full-header.html#two!"><img src="img/portfolio/sgplan/banner2.PNG" crossOrigin="anonymous"></a>
                 <a class="carousel-item" href="full-header.html#three!"><img src="img/portfolio/sgplan/banner3.PNG" crossOrigin="anonymous"></a>
-                <a class="carousel-item" href="full-header.html#four!"><img src="img/portfolio/sgplan/banner4.PNG"></a>
+                <a class="carousel-item" href="full-header.html#four!"><img src="img/portfolio/sgplan/banner5.jpg"></a>
+                <a class="carousel-item" href="full-header.html#four!"><img src="img/portfolio/sgplan/banner6.jpg"></a>
               </div>
             </div>
           </div>
