--- a/index.html
+++ b/index.html
@@ -79,14 +79,13 @@
 
             <div>
               <i class="material-icons">important_devices</i>
-              <span>Desenvolvedor Web / Mobile</span>
+              <span>Desenvolvedor de Software</span>
             </div>
             <hr/>
-            <p>Desenvolvedor Web / Mobile apaixonado por criar novas experiências e simplificar a vida das pessoas.
-              Desenvolveu sistemas de apoio, APIs, websites e aplicativos para o Governo do Estado de Alagoas. Atualmente atua como programador autônomo,
-              já atuou como Engenheiro de Software e Gerente de Projetos em empresas no Brasil e nos Estados Unidos.</p>
+            <p>Desenvolvedor de Software apaixonado por criar novas experiências e simplificar a vida das pessoas através da tecnologia.
+              Desenvolveu sistemas de apoio, APIs, websites e aplicativos para o Governo do Estado de Alagoas. Já atuou como Engenheiro de Software em empresas no Brasil e nos Estados Unidos.</p>
             <hr>
-            <p>Entre em contato para orçamento de projetos, sites e aplicativos.</p>
+            <!--<p>Entre em contato para orçamento de projetos, sites e aplicativos.</p>-->
             <!-- <p> I'm a Full Stack Web Developer from Brazil that started dev about 3 years ago.
                     I love building new experiences for people and simplify their lives.
                     I built IS, websites and mobile apps for the government and i've worked on some brazilian and american agencies</p> -->
@@ -239,9 +238,24 @@
     <div class="timeline-event">
       <div class="card timeline-content">
         <div class="card-content">
-          <a href=""><h4>Programador Autônomo</h4></a>
-          <span>Jan 2017 / Hoje</span>
-          <p> Atende como freelancer empresas do Brasil, já trabalhou em projetos de Startups Brasileiras e Americanas. </p>
+          <a href=""><h4>Engenheiro de Software <br> @Roga</h4></a>
+          <span>Jan 2017 / Março 2018</span>
+          <p> Atuou como Engenheiro de Software em vários projetos Web e Mobile. Principais tecnologias: Ruby on Rails, Angular, React, NodeJS.  </p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+          <p></p>
+        </div>
+      </div>
+      <div class="timeline-badge red white-text"><i class="material-icons">work</i></div>
+    </div>
+
+    <div class="timeline-event">
+      <div class="card timeline-content">
+        <div class="card-content">
+          <a href=""><h4>Desenvolvedor Full Stack <br> @DMCBrazil</h4></a>
+          <span>Junho 2018 / Agosto 2018</span>
+          <p> Realizou manutenção e desenvolveu novas funcionalidades em sistemas de gerenciamento de eventos. Principais Tecnologias: Ruby on Rails  </p>
         </div>
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
@@ -441,7 +455,7 @@
       <div class="col l3 s12">
         <h5 class="white-text">Contato</h5>
         <ul>
-          <li><p class="contact-info"><i class="material-icons">smartphone</i> +55 82 98185-5693</p></li>
+          <li><p class="contact-info"><i class="material-icons">smartphone</i> +55 82 98131-5693</p></li>
           <li><p class="contact-info"><i class="material-icons">email</i> nywton.barros@gmail.com</p></li>
         </ul>
       </div>
